- genounzip can now de-compress into a bgzip-ed .vcf.gz file

4.0.4
- add support for compressing a file directly from a URL
- remove support for 32-bit Windows (its been broken for a while)

4.0.6
- bug fixes

4.0.9
- improve performance for --samples --drop-genotypes --gt-only --strip and --regions - skip reading and decompressing
  all unneeded sections (previously partially implemented, now complete)
- bug fixes
  
4.0.10 
- updated license
- added --header-one to genocat
- query user whether to overwrite an existing file
- better error messages when running external tools
- bug fixes

4.0.11
- bug fixes

5.0.5
- Updated license
- Added user registration
- Added full support for compressing SAM/BAM, FASTQ, FASTA, GVF and 23andMe files
- Compression improvements for VCF files with any of these:
    1. lots of non-GT FORMAT subfields 
    2. ID data 
    3. END INFO subfield 
    4. MIN_DP FORMAT subfield
- Added genounzip output options: --bcf for VCF files and --bam for SAM files
- Added --input-type - tell genozip what type of file this is - if re-directing or file has non-standard extension
- Added --stdin-size - tell genozip the size of a redirected input file, for faster execution
- Added --show-index for genounzip and genocat - see index embedded in a genozip file
- Added --fast option for (a lot) faster compression, with (somewhat) reduced compression ratio
- Added --grep for genocat FASTQ
- Added --debug-progress and --show-hash, useful mostly for genozip developers
- Reduce default vblock from 128MB to 16MB
- Cancel option --strip
list
Note: some versions numbers are skipped due to failed conda builds (every build attempt consumes a version number)

5.0.7
- bug fixes

6.0.0
- Added compress against reference for SAM and VCF - new options --reference and --REFERENCE
- Added better compression for FORMAT/PS in VCF
- Removed backward compatability with versions v1 and v5. Use genozip version 5 to decompress files of all previous versions.