@@ -76,13 +76,15 @@ static const char *help_genozip[] = {
     "   -e --reference    <fasta-genozip-filename> Use a reference file - this is a FASTA file genozipped with the --make-reference option. The same reference needs to be provided to genounzip or genocat.",    
     "                     While genozip is capabale of compressing without a reference, in the following cases providing a reference may result in better compression:",
     "                     1. SAM/BAM files",
-    "                     2. VCF files with significant REFALT content (see \"% of zip\" in --show-sections)",
+    "                     2. VCF files with significant REFALT content (see \"% of zip\" in --show-stats)",
     "",
     "   -E --REFERENCE    Similar to --reference, except genozip copies the reference (or part of it) to the output file, so there is no need to specify --reference in genounzip and genocat.",
     "                     Note: Compression ratio is usally worse with --REFERENCE than without any reference at all",  
     "                     Note on using with --password: the copy of the reference file stored in the compressed file is never encrypted",  
     "",
     "   --make-reference  Compresss a FASTA file to be used as a reference in --reference or --REFERENCE. Ignored for non-FASTA files",
+    "",
+    "   -W --show-stats   Show the internal structure of a genozip file and the associated compression stats",
     "",
     "   --register        Register (or re-register) a non-commericial license to use genozip",
 
@@ -137,7 +139,7 @@ static const char *help_genozip_developer[] = {
     "",
     "   ZUCL --show-memory     Show what buffers are consuming the most memory",
     "",
-    "   Z    -W --show-sections Show the section types of the output genozip file and the compression ratios of each component",
+    "   Z    -W --show-stats   Show the internal structure of a genozip file and the associated compression stats",
     "",
     "   Z    --show-alleles    (VCF only) Output allele values to stdout. Each row corresponds to a row in the VCF file. Mixed-ploidy regions are padded, and 2-digit allele values are replaced by an ascii character",
     "",
@@ -149,9 +151,11 @@ static const char *help_genozip_developer[] = {
     "",
     "   ZUC  --show-b250       Show b250 sections content - each value shows the line (counting from 1) and the index into its dictionary (note: REF and ALT are compressed together as they are correlated). This also works with genounzip and genocat, but without the line numbers.",
     "",
-    "   ZU   --show-one-b250   <field-name>. Show the values for this field or subfield - can be a field like CHROM, RNAME or a subfield like MX",
+    "   ZU   --show-one-b250   <field-name>. Show the values for this field or subfield - can be a field like CHROM, RNAME or a subfield like DP",
     "",
-    "   Z    --dump-one-b250   <field-name>. Dump the binary content of this field, exactly as they appear in the genozip format, to stdout - may be one of the fields 1-9 (CHROM to FORMAT) or an INFO tag",
+    "   Z    --dump-one-b250   <field-name>. Dump the binary content of the b250 data of this field, exactly as they appear in the genozip format, to stdout - specify the field name as it appears in the \"Name\" column in --show-stats, for fields that have \"comp b250\" data",
+    "",
+    "   Z    --dump-one-local  <field-name>. Dump the binary content of the local data of this field, exactly as they appear in the genozip format, to stdout - specify the field name as it appears in the \"Name\" column in --show-stats, for fields that have \"comp local\" data",
     "",
     "   ZUC  --show-headers    Show the sections headers",
     "",
